# storybook-adk

./: DEMO.md  INSTALL.md  OVERVIEW.md  QUICKSTART_WEB.md  README.md  TEST_REPORT.md  USAGE.md  WEB_APP_README.md  WEB_APP_SUMMARY.md  pyproject.toml
examples/: quick_start.py  sample_chapter.md
src/storybook/: __init__.py  chat.py  document_converter.py  editor.py  main.py  models.py  project_manager.py  tools.py  ui.py  web_integration.py
storybook-web/: .env.example  .gitignore  README.md  next.config.js  package.json  setup.sh  tailwind.config.ts  tsconfig.json  tsconfig.server.json
storybook-web/app/: globals.css  layout.tsx  page.tsx
storybook-web/app/components/: CharactersPanel.tsx  ChatPanel.tsx  EditorPanel.tsx  MetadataPanel.tsx  PlotEventsPanel.tsx
storybook-web/app/projects/[id]/: page.tsx
storybook-web/server/: index.ts
storybook-web/server/routes/: chat.ts  projects.ts  review.ts
storybook-web/server/services/: chat_bridge.py  python-bridge.ts  python_runner.py  review_bridge.py  socket.ts
storybook-web/server/types/: index.ts
tests/: conftest.py  test_document_converter.py  test_models.py  test_project_manager.py  test_ui.py
